2012-12-13  Dirk Pranke  <dpranke@chromium.org>

        webkitpy: rename ResultSummary
        https://bugs.webkit.org/show_bug.cgi?id=104871

        Reviewed by Eric Seidel.

        This patch changes the names of ResultSummary and related modules,
        classes, and variables as a part of the larger clean up in bug 103824.

        This change is basically a bunch of search and replaces:
        - result_summary.py -> test_run_results.py
        - class ResultSummary -> class TestRunResults
        - "result_summary" or "rs" as a generic variable name -> "run_results",
          when it doesn't matter (or we don't know) if this refers to the
          initial pass over the tests or the retry pass.
        - "result_summary" as a variable containing the results of the initial,
          complete test run -> "initial_results"
        - "retry_summary" as a variable containing the results of retried
          results -> "retry_results"
        - ResultSummary.results (the property) -> TestRunResults.results_by_name
        - ResultSummary.failures (the property) -> TestRunResults.failures_by_name
        - RunDetails.result_summary -> RunDetails.initial_results
        - RunDetails.retry_summary -> RunDetails.retry_results

        * Scripts/webkitpy/layout_tests/controllers/layout_test_runner.py:
        (LayoutTestRunner.__init__):
        (LayoutTestRunner.run_tests):
        (LayoutTestRunner._mark_interrupted_tests_as_skipped):
        (LayoutTestRunner._interrupt_if_at_failure_limits):
        (LayoutTestRunner._interrupt_if_at_failure_limits.interrupt_if_at_failure_limit):
        (LayoutTestRunner._update_summary_with_result):
        (LayoutTestRunner._handle_finished_test):
        * Scripts/webkitpy/layout_tests/controllers/layout_test_runner_unittest.py:
        (FakePrinter.print_expected):
        (LayoutTestRunnerTests.test_interrupt_if_at_failure_limits):
        (LayoutTestRunnerTests.test_update_summary_with_result):